--- a/logincadastro.css
+++ b/logincadastro.css
@@ -9,7 +9,7 @@ a {
 }
 
 .container {
-	background-color: #dcd6d0;
+	background-color: #cccccc;
 	left: 0;
 	right: 0;
 	margin-left: auto;
@@ -67,7 +67,7 @@ body {
 
 .formulario {
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 70px;
 	width: 400px;
 	height: 550px;
 	background: rgb(187,187,183);
@@ -81,10 +81,14 @@ body {
 	display: none;
 }
 
-.cadastro {
+.login {
 	position: relative;
 	width: 100%;
 	height: 100%;
+}
+
+.login  {
+	align-items: center;
 }
 
 label {
@@ -129,7 +133,7 @@ input::placeholder {
 }
 
 input:focus {
-	border-color: rgb(134, 57, 57);
+	border-color: rgb(221, 61, 61);
 	transition: border-color 0.2s ease-in;
 
 }
@@ -156,7 +160,7 @@ button:hover {
 	background: #b74444;
 }
 
-.login {
+.cadastro {
 	height: 534px;
 	background: rgb(202, 168, 139);
 	background: linear-gradient(180deg, rgb(200, 200, 197) 0%, rgb(187, 186, 176) 50%, rgba(171,140,112,1) 100%);
@@ -165,21 +169,21 @@ button:hover {
 	transition: .8s ease-in-out;
 }
 
-.login label {
+.cadastro label {
 	color: #302e2e;
 	transform: scale(.6);
 }
 
-#chk:checked~.login {
+#chk:checked~.cadastro {
 	transform: translateY(-600px);
 	background-color: rgb(200, 200, 197);
 	transition: .8s ease-in-out;
 }
 
-#chk:checked~.login label {
+#chk:checked~.cadastro label {
 	transform: scale(1);
 }
 
-#chk:checked~.cadastro label {
+#chk:checked~.login label {
 	transform: scale(.6);
 }
