--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: raleway;
+    font-family: Raleway;
     src: url(../assets/fonts/Raleway-VariableFont_wght.ttf)
 }
 
