--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -335,9 +335,12 @@ canvas {
 /* PAGINA DOS GRÁFICOS 2023 */
 
 .janela {
-  display: flex;
-  /* width: 100vw; */
-  background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    /* height: 100vh; */
+    width: 100%;
 }
 
 .header-left a {
@@ -351,7 +354,7 @@ canvas {
   left: 0;
   z-index: 999;
   height: 100vh;
-  width: 15%;
+  width: 16vw;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
