--- a/public/css/quizLyrics.css
+++ b/public/css/quizLyrics.css
@@ -13,6 +13,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-y: -140px;
+    background-position-x: 50px;
 }
 
 a {
@@ -22,11 +23,18 @@ a {
 
 .box {
     display: flex;
+    width: 84vw;
 }
 
 .imgsair {
     width: 3rem;
     filter: invert(100%);
+
+}
+
+.box a {
+    z-index: 2;
+    margin-left: 230px;
 }
 
 .sair {
@@ -52,15 +60,17 @@ a {
 }
 
 .quiz {
+    z-index: 0;
     position: absolute;
-    margin: auto;
-    margin-top: 115px;
+    /* margin: auto; */
+    /* margin-top: 115px; */
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    margin-left: 120px;
     width: 100%;
-    height: 70%;
+    height: 100%;
     font-family: Raleway;
     /* background-color: rgba(146, 32, 146, 0.5); */
 }
@@ -158,6 +168,7 @@ a {
     font-size: 40px;
     font-weight: 600;
     text-align: center;
+    color: white;
 }
 
 .iniciar button {
