--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -364,6 +364,12 @@ canvas {
   background: linear-gradient(180deg, rgba(208,90,190,1) 0%, rgba(143,48,168,1) 50%, rgba(111,30,151,1) 100%);
 }
 
+/* .bg-color-change1 {
+  background: rgb(208,90,190);
+  background: linear-gradient(180deg, rgb(45, 199, 14) 0%, rgba(143,48,168,1) 50%, rgba(111,30,151,1) 100%);
+
+} */
+
 .dash-right {
   display: flex;
   width: 70%;
@@ -399,13 +405,20 @@ canvas {
 }
 
 .btn-nav {
-  width: 75%;
+  width: 80%;
   color: white;
   background-color: #f315c3;
-  border-radius: 10px;
+  border-radius: 0 30px 30px 0;
   text-align: center;
   padding: 2% 5%;
   border: 2px solid rgb(219, 219, 219);
+  border-left: none;
+}
+
+
+.active-page {
+  background-color: #c7069d;
+
 }
 
 .btn-nav:hover {
@@ -420,12 +433,18 @@ canvas {
 }
 
 .texto {
-  text-align: center;
+  text-align: left;
   color: white;
+  padding: 10px;
 }
 
 .inicio {
-  width: 50%;
+  text-align: center;
+  border-radius: 30px;
+  width: 30%;
+  border: 2px solid rgb(219, 219, 219);
+  margin-left: 65px;
+  cursor: pointer;
 }
 
 .list-btns {
@@ -433,7 +452,7 @@ canvas {
   height: 50%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: space-evenly;
   
 }
