--- a/public/css/quizMusicas.css
+++ b/public/css/quizMusicas.css
@@ -2,6 +2,10 @@
     font-family: Raleway;
     src: url(../assets/fonts/Raleway-VariableFont_wght.ttf)
 }
+@font-face {
+    font-family: folklore;
+    src: url(../assets/fonts/IMFellDWPica-Italic.ttf);
+  }
 
 body {
     margin: 0;
