--- a/public/css/quizVida.css
+++ b/public/css/quizVida.css
@@ -3,6 +3,11 @@
     src: url(../assets/fonts/Raleway-VariableFont_wght.ttf)
 }
 
+@font-face {
+    font-family: folklore;
+    src: url(../assets/fonts/IMFellDWPica-Italic.ttf);
+  }
+
 body {
     margin: 0;
     padding: 0;
