--- a/public/css/quizLyrics.css
+++ b/public/css/quizLyrics.css
@@ -68,14 +68,15 @@ a {
     z-index: 0;
     position: absolute;
     /* margin: auto; */
-    /* margin-top: 115px; */
+    margin-top: 110px;
+    /* margin-bottom: 100px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-left: 120px;
     width: 100%;
-    height: 100%;
+    height: 70%;
     font-family: Raleway;
     /* background-color: rgba(146, 32, 146, 0.5); */
 }
@@ -235,7 +236,15 @@ a {
 }
 
 .graph {
-    /* background-color: rgba(32, 119, 146, 0.5); */
+    background-color: rgb(70 46 36 / 50%);
     width: 16%;
-    height: 40%;
+    height: 200px;
+    position: relative;
+    margin-left: 878px;
+    /* margin-bottom: 300px; */
+    margin-top: 275px;
+    padding: 5px;
+    border-radius: 10px;
 }
+
+
