--- a/public/css/quizMusicas.css
+++ b/public/css/quizMusicas.css
@@ -66,14 +66,15 @@ a {
     z-index: 0;
     position: absolute;
     /* margin: auto; */
-    /* margin-top: 115px; */
+    margin-top: 110px;
+    /* margin-bottom: 100px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-left: 120px;
     width: 100%;
-    height: 100%;
+    height: 70%;
     font-family: Raleway;
     /* background-color: rgba(146, 32, 146, 0.5); */
 }
@@ -231,7 +232,17 @@ a {
 }
 
 .graph {
-    /* background-color: rgba(32, 119, 146, 0.5); */
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
     width: 16%;
-    height: 40%;
+    height: 200px;
+    position: relative;
+    margin-left: 878px;
+    /* margin-bottom: 300px; */
+    margin-top: 275px;
+    padding: 5px;
+}
+
+canvas, .grafico_pontuacao {
+    width: 233px;
 }
