--- a/public/css/quizVida.css
+++ b/public/css/quizVida.css
@@ -64,17 +64,19 @@ a {
     z-index: 0;
     position: absolute;
     /* margin: auto; */
-    /* margin-top: 115px; */
+    margin-top: 110px;
+    /* margin-bottom: 100px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-left: 120px;
     width: 100%;
-    height: 100%;
+    height: 70%;
     font-family: Raleway;
     /* background-color: rgba(146, 32, 146, 0.5); */
 }
+
 
 .ranking {
     /* background-color: rgba(32, 119, 146, 0.5); */
@@ -228,7 +230,17 @@ a {
 }
 
 .graph {
-    /* background-color: rgba(32, 119, 146, 0.5); */
+    background-color: rgb(255 255 255 / 50%);
     width: 16%;
-    height: 40%;
+    height: 200px;
+    position: relative;
+    margin-left: 854px;
+    /* margin-bottom: 300px; */
+    border-radius: 10px;
+    margin-top: 275px;
+    padding: 5px;
+}
+
+canvas, .grafico_pontuacao {
+    width: 233px;
 }
