--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -16,11 +16,19 @@ body {
   overflow: auto;
 }
 
+.conteudo {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .tabela-ranking {
   display: flex;
   flex-direction: column;
   margin-left: 30px;
-  margin-top: 120px;
+  margin-bottom: 120px;
   width: 500px;
   justify-content: center;
   align-items: center;
@@ -31,6 +39,10 @@ body {
   height: 30px;
   margin-bottom: 20px;
   text-align: center;
+}
+
+.tabela-ranking, h3 {
+  margin-top: 0;
 }
 
 .ranking, th, td{
@@ -47,6 +59,18 @@ th{
 
 .ranking {
   min-width: 90%;
+}
+
+.grafico-albuns {
+  text-align: center;
+  /* margin-top: 120px; */
+}
+
+.grafico-album {
+  display: block;
+  box-sizing: border-box;
+  height: 700px;
+  width: 500px;
 }
 
 /* PAGINA DOS GRÁFICOS 2023 */
