--- a/public/css/logincadastro.css
+++ b/public/css/logincadastro.css
@@ -36,14 +36,15 @@ a {
 
 .card_erro {
 	display: none;
-	background-color: #fff;
-	color: black;
+	/* background-color: #fff; */
+	color: white;
 	width: 230px;
 	position: fixed;
 	border-radius: 4px;
-	border: #e6005a 3px solid;
+	border: #d6d6d6 1px solid;
 	padding: 10px;
 	margin-right: 10%;
+	margin-top: 250px;
 }
 
 .card_erro #mensagem_erro {
@@ -54,6 +55,7 @@ a {
 .loading-div {
 	width: 50px;
 	margin: auto;
+	margin-top: 20px;
 	display: none;
 }
 
