--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,7 +174,6 @@ li:hover {
 }
 
 .inicio {
-    /* background-image: url(media/background\ debut.jpg); */
     background-size: 100%;
     background-repeat: no-repeat;
     display: flex;
@@ -184,8 +183,7 @@ li:hover {
     height: 75vh;
     background: rgb(208,90,190);
     background: linear-gradient(180deg, rgba(208,90,190,1) 0%, rgba(143,48,168,1) 50%, rgba(111,30,151,1) 100%);
-    /* background-image: url("taylorswiftttpd.jpg"); */
-    /* background-size: cover; */
+    border-top: 3px solid rgb(194, 82, 194);
 }
 
 .albuns {
@@ -193,7 +191,7 @@ li:hover {
     font-family: Raleway;
     font-weight: 800;
     letter-spacing: 4px;
-    font-size: 30px;
+    font-size: 40px;
     text-shadow: 2px 2px 7px rgba(65, 65, 68, 0.8);
     text-transform: uppercase;
     color: rgb(212, 212, 212);
@@ -282,21 +280,98 @@ li:hover {
     right: 10px;
 }
 
-
-
-.noticias {
-    background-image: url(../assets/imgs/background\ fearless.jpg);
-    background-size: 100%;
-    /* background-repeat: no-repeat; */
-    display: flex;
-    height: 500px;
-    background-color: #eac086;
-}
-
 .sobremim {
     display: flex;
     height: 200vh;
-    /* background-color: #8d578b;     */
     background: rgb(111,30,151);
     background: linear-gradient(180deg, rgba(111,30,151,1) 0%, rgba(143,48,168,1) 50%, rgba(208,90,190,1) 100%);
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
+
+.texto-box {
+    height: 45vh;
+    width: 80vw;
+    /* background-color: rgba(236, 235, 235, 0.2); */
+    border-radius: 10px;
+    display: flex;
+}
+
+.imagem {
+    /* background-color: rgba(185, 92, 194, 0.4); */
+    max-height: 100%;
+    max-width: 30%;
+    min-height: 100%;
+    min-width: 30%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imagem img {
+    object-fit: cover;
+    width: 90%;
+    height: 90%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.textos {
+    display: flex;
+    flex-direction: column;
+    /* background-color: rgba(92, 170, 194, 0.4); */
+    max-height: 100%;
+    width: 70%;
+    padding: 10px;
+    justify-content: center;
+}
+
+.cabecalho h3 {
+    color: rgb(214, 131, 214);
+    text-shadow: 3px 4px 7px rgba(112, 68, 112, 0.8);
+    text-transform: uppercase;
+    padding: 10px;
+    font-family: Raleway;
+    font-size: 40px;
+    margin-top: 0px;
+    height: 10px;
+    margin-bottom: 0;
+}
+
+.parte1 {
+    text-align: end;
+}
+
+.parte3 {
+    text-align: end;
+}
+
+.corpo {
+    /* background-color: rgba(185, 92, 194, 0.4); */
+    color: white;
+    font-size: 23px;
+    font-family: Raleway;
+    text-align: justify;
+    padding: 10px;
+    min-height: 70%;
+}
+
+
+
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    width: 100vw;
+    background: rgba(208,90,190,1);
+    background: linear-gradient(180deg, rgba(208,90,190,1) 0%, rgb(235, 128, 217) 100%);
+    font-family: Raleway;
+    font-size: 25px;
+    color: rgb(216, 216, 216);
+    /* border-top: 3px solid rgb(197, 114, 197); */
+    text-align: center;
+}
+
