--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -99,6 +99,25 @@ th{
   width: 500px;
 }
 
+.albumpopular {
+  flex-direction: column;
+  display: flex;
+  position: fixed;
+  width: 400px;
+  height: 100px;
+  background-color: rgba(233, 233, 233, 0.3);
+  right: 160px;
+  top: 590px;
+  font-weight:300;
+  font-size: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 10px;
+  border: 2px solid rgb(160 160 160);
+}
+
 /* PAGINA DOS GRÁFICOS 2023 */
 
 .janela {
